--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -7,9 +7,9 @@
 					<div class="form-group">
 						<textarea class="form-control" cols="10" rows="5" name="comment[text]" placeholder="Comment" required> </textarea> 
 					</div>
-					<div class="form-group">
+					<!-- <div class="form-group">
 						<input class="form-control" type="text" name="comment[author]" placeholder="Author" required />
-					</div>
+					</div> -->
 					<div class="form-group">
 						<button class="btn btn-large btn-default btn-block btn-primary" type="submit" name="submit"> Submit! </button>	
 					</div>
