--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,6 +20,7 @@
 						<h4> <a> <%= campground.name %> </a> </h4>
 						<p>	<%= campground.description %> </p> 
 						<p> <em>Submitted by</em> <%= campground.author.username %> </p>
+						<a class="btn btn-warning" href="/campgrounds/<%= campground._id%>/edit"> Edit</a>
 					</div>
 				</div>
 				
