Only allow a user who creates a campground to edit, update or delete it

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,10 +20,12 @@
 						<h4> <a> <%= campground.name %> </a> </h4>
 						<p>	<%= campground.description %> </p> 
 						<p> <em>Submitted by</em> <%= campground.author.username %> </p>
+					<% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
 						<a class="btn btn-warning" href="/campgrounds/<%= campground._id%>/edit"> Edit</a>
 						<form id="delete-form" method="POST" action="/campgrounds/<%= campground._id%>?_method=DELETE">
 							<button class="btn btn-danger" type="submit">Delete</button>
 						</form>
+					<% } %>
 					</div>
 				</div>
 				
