--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -22,7 +22,7 @@
 						<p> <em>Submitted by</em> <%= campground.author.username %> </p>
 					<% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
 						<a class="btn btn-warning" href="/campgrounds/<%= campground._id%>/edit"> Edit</a>
-						<form id="delete-form" method="POST" action="/campgrounds/<%= campground._id%>?_method=DELETE">
+						<form class="delete-form" method="POST" action="/campgrounds/<%= campground._id%>?_method=DELETE">
 							<button class="btn btn-danger" type="submit">Delete</button>
 						</form>
 					<% } %>
@@ -44,6 +44,9 @@
 						<a class="btn btn-xs btn-warning" 
 						   href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit"> 
 							Edit </a> 
+						<form class="delete-form" method="POST" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE">
+							<button class="btn btn-xs btn-danger"> Delete </button>
+						</form>
 					</div>
 					
 				</div>
