--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -8,6 +8,9 @@
 						<input class="form-control" type="text" name="name" placeholder="Campground's name" required />
 					</div>
 					<div class="form-group">
+						<input class="form-control" type="number" name="price" placeholder="Campground's price" min="0.01" step="0.01" required />
+					</div>
+					<div class="form-group">
 						<input class="form-control" type="text" name="image" placeholder="Campground's image URL" required />
 					</div>
 					<div class="form-group">
