Enable Geocoding of campground locations via the Google maps API

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -13,6 +13,9 @@
 							<input class="form-control" type="text" name="image" placeholder="Campground's image URL" required />
 						</div>
 						<div class="form-group">
+							<input class="form-control" type="text" name="location" placeholder="Edmonton, AB" required />
+						</div>
+						<div class="form-group">
 							<textarea class="form-control" cols="10" rows="5" name="description" placeholder="Campground's description" required> </textarea> 
 						</div>
 						<div class="form-group">
