--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -13,6 +13,9 @@
 							<input class="form-control" type="text" name="campground[image]" value="<%= campground.image %>" required />
 						</div>
 						<div class="form-group">
+							<input class="form-control" type="text" name="campground[location]" value="<%= campground.location %>" required />
+						</div>
+						<div class="form-group">
 							<textarea class="form-control" cols="10" rows="5" name="campground[description]" required> <%= campground.description %> </textarea> 
 						</div>
 						<div class="form-group">
