--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,8 +18,10 @@
 						<div class="caption-full">
 							<h4 class="pull-right"> $<%= campground.price %> / night </h4>
 							<h4> <a> <%= campground.name %> </a> </h4>
-							<p>	<%= campground.description %> </p> 
-							<p> <em>Submitted by</em> <%= campground.author.username %> </p>
+							<p>	<%= campground.description %> </p>
+							<p>
+  								<em>Submitted by: <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></em>
+							</p>
 						<% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
 							<a class="btn btn-warning" href="/campgrounds/<%= campground._id%>/edit"> Edit</a>
 							<form class="delete-form" method="POST" action="/campgrounds/<%= campground._id%>?_method=DELETE">
@@ -39,7 +41,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<strong> <%= comment.author.username %> - </strong>
-							<span class="pull-right"> 10 days ago </span>
+							<span class="pull-right"><%= moment(comment.createdAt).fromNow() %></span>
 							<p>  <%= comment.text %> </p>
 						<% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
 							<a class="btn btn-xs btn-warning" 
