--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -22,7 +22,7 @@
 							<p>
   								<em>Submitted by: <%= campground.author.username %>, <%= moment(campground.createdAt).fromNow() %></em>
 							</p>
-						<% if (currentUser && campground.author.id.equals(currentUser._id)) { %>
+						<% if (currentUser && campground.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
 							<a class="btn btn-warning" href="/campgrounds/<%= campground._id%>/edit"> Edit</a>
 							<form class="delete-form" method="POST" action="/campgrounds/<%= campground._id%>?_method=DELETE">
 								<button class="btn btn-danger" type="submit">Delete</button>
@@ -43,7 +43,7 @@
 							<strong> <%= comment.author.username %> - </strong>
 							<span class="pull-right"><%= moment(comment.createdAt).fromNow() %></span>
 							<p>  <%= comment.text %> </p>
-						<% if (currentUser && comment.author.id.equals(currentUser._id)) { %>
+						<% if (currentUser && comment.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin) { %>
 							<a class="btn btn-xs btn-warning" 
 							   href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit"> 
 								Edit </a> 
