--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,6 +10,18 @@
 							<input class="form-control" type="password" name="password" placeholder="password">
 						</div>
 						<div class="form-group">
+							<input class="form-control" type="text" name="firstName" placeholder="First name">
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="text" name="lastName" placeholder="Surname">
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="email" name="email" placeholder="Email address">
+						</div>
+						<div class="form-group">
+							<input class="form-control" type="text" name="avatar" placeholder="Avatar image URL">
+						</div>
+						<div class="form-group">
 							<input class="form-control" type="text" name="adminCode" placeholder="Admin code">
 						</div>
 						<div class="form-group">
